...
        Expanded(
          child: Column(
            crossAxisAlignment: CrossAxisAlignment.start,
            children: [
              Text(
                name,
                key: const Key('a1_butikk_produkt_navn'),
                style: bDisplay(
                  context,
                  22,
                  weight: FontWeight.w800,
                  letterSpacingEm: -.025,
                  height: 1.1,
...
