...
                    ),
                  ),
                  Positioned(
                    top: 14 * s,
                    right: 14 * s,
                    child: OnbPressable(
                      key: const Key('a1_butikk_produkt_lukk'),
                      onTap: onClose,
                      pressDy: 0,
                      pressScale: .92,
                      child: Container(
                        width: 38 * s,
                        height: 38 * s,
...
